<resources>
    <string name="app_name">Calculator</string>
    <string name="Calculator">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="decimal">.</string>
    <string name="cursor">0</string>
    <string name="equals">=</string>
    <string name="percentag">%</string>
    <string name="allclear">AC</string>
    <string name="plusorminus">+/-</string>
    <string name="result">Result</string>
    <string name="input">Enter input</string>

</resources>