<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitleCalcu"
        style="@style/customiseoForButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        style="@style/customiseoForButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/Calculator"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtText1"
        style="@style/customiseoForButtons"
        android:layout_width="312dp"
        android:layout_height="154dp"
        android:layout_marginTop="30dp"
        android:gravity="center|end"
        android:text=" "
    android:singleLine="true"
        android:textSize="40pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCalcu" />

    <Button
        android:id="@+id/btnPercentage"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/percentag"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnZero"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/zero"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPercentage" />

    <Button
        android:id="@+id/btnDecimalPoint"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/decimal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnZero" />

    <Button
        android:id="@+id/btnEquals"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/round_button"
        android:backgroundTint="#465DDA"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDecimalPoint" />


    <Button
        android:id="@+id/btnOne"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/one"

        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTwo"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/two"

        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnOne" />

    <Button
        android:id="@+id/btnThree"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/three"

        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnTwo" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/plus"
        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnThree" />

    <Button
        android:id="@+id/btnFour"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/four"

        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFive"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/five"

        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnSix"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/six"

        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintStart_toEndOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnSub"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sub"
        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnSeven"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/seven"

        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEight"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/eight"

        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnNine"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nine"

        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintStart_toEndOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnMulti"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        android:textColor="#465DDA"

        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnAllCLear"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/allclear"

        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"

        android:layout_marginBottom="8dp"
        android:background="@drawable/back_arrow"
        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintStart_toEndOf="@+id/btnAllCLear" />

    <Button
        android:id="@+id/btnPlusOrminus"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/plusorminus"
        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnDiv"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/div"
        android:textColor="#465DDA"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlusOrminus" />

</androidx.constraintlayout.widget.ConstraintLayout>